[workspace]
members = [
  # Contracts
  "contracts/permits",
  "contracts/storage",
  "contracts/xcontract-calls",

  # Tester
  "integration-testing",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

