[package]
name = "xcontract-calls"
version = "0.1.0"
authors = ["Chris Ricketts <chris_ricketts@protonmail.com>"]
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.10.0", package = "secret-cosmwasm-std" }
schemars = "0.7"
serde = { version = "1.0.136", features = ["derive"], default-features = false }
secret-toolkit = { version = "0.2" }
secret-storage-plus = { git = "https://github.com/chris-ricketts/secret-storage-plus" }
cosmwasm-storage = { version = "0.10.0", features = [
  "iterator",
], package = "secret-cosmwasm-storage" }
